[gd_scene load_steps=21 format=4 uid="uid://c413rw2q6aiqs"]

[ext_resource type="Texture2D" uid="uid://5d8pcoocqfik" path="res://ast/models/props/cardboard box/cardboard_box_cardboard_box_texture.png" id="1_8d4cb"]
[ext_resource type="Script" uid="uid://jusxctorg7jg" path="res://ast/actors/props/cardboard box/cardboard_box.gd" id="1_h752m"]
[ext_resource type="Script" uid="uid://cabvjkvkoh7b8" path="res://src/interactable_component/interactable_component.gd" id="3_ho7cs"]
[ext_resource type="Theme" uid="uid://dor86n6is4l5j" path="res://res/themes/default.tres" id="4_1jtvv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ftw0c"]
size = Vector3(0.78063965, 0.7050171, 0.7873535)

[sub_resource type="BoxShape3D" id="BoxShape3D_ho7cs"]
size = Vector3(1.9818726, 2.0218506, 0.23747253)

[sub_resource type="BoxShape3D" id="BoxShape3D_1jtvv"]
size = Vector3(0.54577637, 2.0715332, 0.56573486)

[sub_resource type="BoxShape3D" id="BoxShape3D_w0dvq"]
size = Vector3(0.005584717, 0.32128906, 0.8129883)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6a2hb"]
resource_name = "cardboard"
cull_mode = 2
albedo_texture = ExtResource("1_8d4cb")
roughness = 0.5
texture_filter = 2
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_s4720"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.1710188, 2),
"format": 34359742465,
"index_count": 84,
"index_data": PackedByteArray("AAABAAIAAwACAAEAAwAEAAIAAAAFAAEABgAFAAAABgAIAAUACAAJAAUAFAAGAAAACAAGABQAFAAAAAcACAAVAAkACAAUABUAFQALAAkAFgAUAAcAFQAUABYAFgAHAA4AFQAXAAsAFQAWABcAFwAMAAsAFwAKAAwAFwAWAA0AFwANAAoADQAWAA4ADQAOAA8ADQAQAAoADQARABAAEAARABIAEAASABMA"),
"lods": [0.0008109928, PackedByteArray("AAABAAIAAwACAAEAAwAEAAIAAAAFAAEABgAFAAAABgAAAAcABgAIAAUACAAJAAUACAAKAAkACAAGAAoACgALAAkACgAMAAsACgAGAA0ADQAGAAcADQAHAA4ADQAOAA8ADQAQAAoADQARABAAEAARABIAEAASABMA")],
"name": "cardboard",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAv9mPfT8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIA/I6c3vfLjlT8AAIC/K6c3vfLjlT8AAIA/AACAv9mPfT8AAIC/AACAvwAAgL8AAIA/ANcjvNmPfT8AAIA/AACAvwAAgL8AAIC/4NYjvNmPfT8AAIC/AACAPwAAgL8AAIC/zczMPdmPfT8AAIC/AACAP9mPfT8AAIC/AACAPwAAgL8AAIA/zczMPdmPfT8AAIA/AACAP9mPfT8AAIA/AACAPwAAgD8AAIC/AACAPwAAgD8AAIA/dL8ZPlGblD8AAIA/dL8ZPlGblD8AAIC/4NYjvAAAgL8AAIA/ANcjvAAAgL8AAIC/zczMPQAAgL8AAIA/zczMPQAAgL8AAIC/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_s0yhl"]
resource_name = "cardboard_box_Cube_002"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2.1710188, 2),
"attribute_data": PackedByteArray("7Md+PwAAAAAAAIA/AACAPwAAgD8AAAAA7Md+PwAAgD8AAICzAAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAAAAAACAPwAAgD+lcP0+AAAAAAAAAAAAAIA/AAAAAAAAAAClcP0+AACAPwAAgD8AAAAAzcwMPwAAgD/NzAw/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAD0XNA+ij85P3z8jD5Utu0+B1OUPla27T70XNA+VrbtPiDjFT6KPzk/IOMVPla27T4iFic/RFA/Py0LST9gFPY+IhYnP2AU9j7Wr2s/RFA/PxHRTD9gFPY+1q9rP2AU9j7NzAw/AAAAAM3MDD8AAIA/pXD9PgAAAAClcP0+AACAPwdTlD6KPzk/e/yMPoo/OT8tC0k/RFA/PxLRTD9EUD8/"),
"format": 34359742487,
"index_count": 84,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAADAAAABAAFAAMABgAHAAgABgAJAAcAIgAUABIAIgAjABQAJAAjACIAJAAlACMAFQAlACQAFQATACUACgALAAwACgANAAsADgAPABAADgARAA8AJgAXABgAFgAmABgAFgAYABkAJgAnABcAJwAbABcAJwAaABsAHAAdAB4AHAAoAB0AKAAgAB0AKAApACAAKQAhACAAKQAfACEA"),
"lods": [0.0008109928, PackedByteArray("AAABAAIAAAADAAEABAADAAAABAAFAAMABgAHAAgABgAJAAcACgALAAwACgANAAsADgAPABAADgARAA8AEgATABQAFQATABIAFgAXABgAFgAYABkAFgAaABcAGgAbABcAHAAdAB4AHAAfAB0AHwAgAB0AHwAhACAA")],
"material": SubResource("StandardMaterial3D_6a2hb"),
"name": "cardboard",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("AACAv9mPfT8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIA/AACAv9mPfT8AAIC/AACAvwAAgL8AAIA/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/AACAPwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/I6c3vfLjlT8AAIC/AACAvwAAgD8AAIA/AACAvwAAgD8AAIC/K6c3vfLjlT8AAIA/AACAPwAAgD8AAIC/dL8ZPlGblD8AAIA/dL8ZPlGblD8AAIC/AACAPwAAgD8AAIA/AACAPwAAgL8AAIC/AACAvwAAgL8AAIA/AACAPwAAgL8AAIA/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/ANcjvNmPfT8AAIA/zczMPdmPfT8AAIA/AACAP9mPfT8AAIA/AACAvwAAgL8AAIA/AACAv9mPfT8AAIA/AACAvwAAgL8AAIC/4NYjvNmPfT8AAIC/AACAv9mPfT8AAIC/AACAPwAAgL8AAIC/zczMPdmPfT8AAIC/AACAP9mPfT8AAIC/zczMPQAAgL8AAIC/zczMPQAAgL8AAIA/ANcjvAAAgL8AAIC/4NYjvAAAgL8AAIA/zczMPQAAgL8AAIA/4NYjvAAAgL8AAIA/ANcjvAAAgL8AAIC/zczMPQAAgL8AAIC/AAD/f/9/AAAAAP9//38AAAAA/3//fwAAAAD/f/9/AAAAAP9//38AAAAA/3//fwAA////f////7////9/////v////3////+/////f////7+QbI/sj+y2yZBsj+yP7LbJkGyP7I/stsmQbI/sj+y2yWGUnOuc6861YZSc65zrzrVhlJzrnOvOtWGUnOuc6861/38AAP///z//fwAA////P/9/AAD///8//38AAP///z//f/9/////v/9//3////+//3//f////7//f/9/////v/9//3////+//3//f////7//////////P/////////8//////////z//////////P/////////8//////////z//fwAA////P/9/AAD///8//38AAP///z//fwAA////P/9//3////+//3//f////7//////////P/////////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_s4720")

[sub_resource type="ArrayMesh" id="ArrayMesh_si0u0"]
_surfaces = [{
"aabb": AABB(-1, -1, -1.0017215, 2, 2.760373, 2.0017216),
"format": 34359742465,
"index_count": 84,
"index_data": PackedByteArray("AAABAAIAAwACAAEAAwAEAAIAAAAFAAEABgAFAAAABgAIAAUACAAJAAUAFAAGAAAACAAGABQAFAAAAAcACAAVAAkACAAUABUAFQALAAkAFgAUAAcAFQAUABYAFgAHAA4AFQAXAAsAFQAWABcAFwAMAAsAFwAKAAwAFwAWAA0AFwANAAoADQAWAA4ADQAOAA8ADQAQAAoADQARABAAEAARABIAEAASABMA"),
"lods": [0.00027470713, PackedByteArray("AAABAAIAAwACAAEAAwAEAAIAAAAFAAEABgAFAAAABgAAAAcABgAIAAUACAAJAAUACAAKAAkACAAGAAoACgALAAkACgAMAAsACgAGAA0ADQAGAAcADQAHAA4ADQAOAA8ADQAQAAoADQARABAAEAARABIAEAASABMA")],
"name": "cardboard",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAv9mPfT8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIA/yaYbv+lT4T9pOIC/yqYbv+lT4T8vj38/AACAv9mPfT8AAIC/AACAvwAAgL8AAIA/ANcjvNmPfT8AAIA/AACAvwAAgL8AAIC/4NYjvNmPfT8AAIC/AACAPwAAgL8AAIC/zczMPdmPfT8AAIC/AACAP9mPfT8AAIC/AACAPwAAgL8AAIA/zczMPdmPfT8AAIA/AACAP9mPfT8AAIA/AACAPwAAgD8AAIC/AACAPwAAgD8AAIA/xRoeP9z64D8BAIA/xRoeP9z64D///3+/4NYjvAAAgL8AAIA/ANcjvAAAgL8AAIC/zczMPQAAgL8AAIA/zczMPQAAgL8AAIC/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_lp6qq"]
resource_name = "cardboard_box_Cube_003"
_surfaces = [{
"aabb": AABB(-1, -1, -1.0017215, 2, 2.760373, 2.0017216),
"attribute_data": PackedByteArray("7Md+PwAAAAAAAIA/AACAPwAAgD8AAAAA7Md+PwAAgD8AAICzAAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAgD8AAAAAAACAPwAAgD+lcP0+AAAAAAAAAAAAAIA/AAAAAAAAAAClcP0+AACAPwAAgD8AAAAAzcwMPwAAgD/NzAw/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAD0XNA+ij85P3z8jD5Utu0+B1OUPla27T70XNA+VrbtPiDjFT6KPzk/IOMVPla27T4iFic/RFA/Py0LST9gFPY+IhYnP2AU9j7Wr2s/RFA/PxHRTD9gFPY+1q9rP2AU9j7NzAw/AAAAAM3MDD8AAIA/pXD9PgAAAAClcP0+AACAPwdTlD6KPzk/e/yMPoo/OT8tC0k/RFA/PxLRTD9EUD8/"),
"format": 34359742487,
"index_count": 84,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAADAAAABAAFAAMABgAHAAgABgAJAAcAIgAUABIAIgAjABQAJAAjACIAJAAlACMAFQAlACQAFQATACUACgALAAwACgANAAsADgAPABAADgARAA8AJgAXABgAFgAmABgAFgAYABkAJgAnABcAJwAbABcAJwAaABsAHAAdAB4AHAAoAB0AKAAgAB0AKAApACAAKQAhACAAKQAfACEA"),
"lods": [0.00027470713, PackedByteArray("AAABAAIAAAADAAEABAADAAAABAAFAAMABgAHAAgABgAJAAcACgALAAwACgANAAsADgAPABAADgARAA8AEgATABQAFQATABIAFgAXABgAFgAYABkAFgAaABcAGgAbABcAHAAdAB4AHAAfAB0AHwAgAB0AHwAhACAA")],
"material": SubResource("StandardMaterial3D_6a2hb"),
"name": "cardboard",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 42,
"vertex_data": PackedByteArray("AACAv9mPfT8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIA/AACAv9mPfT8AAIC/AACAvwAAgL8AAIA/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/AACAPwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/yaYbv+lT4T9pOIC/AACAvwAAgD8AAIA/AACAvwAAgD8AAIC/yqYbv+lT4T8vj38/AACAPwAAgD8AAIC/xRoeP9z64D8BAIA/xRoeP9z64D///3+/AACAPwAAgD8AAIA/AACAPwAAgL8AAIC/AACAvwAAgL8AAIA/AACAPwAAgL8AAIA/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/ANcjvNmPfT8AAIA/zczMPdmPfT8AAIA/AACAP9mPfT8AAIA/AACAvwAAgL8AAIA/AACAv9mPfT8AAIA/AACAvwAAgL8AAIC/4NYjvNmPfT8AAIC/AACAv9mPfT8AAIC/AACAPwAAgL8AAIC/zczMPdmPfT8AAIC/AACAP9mPfT8AAIC/zczMPQAAgL8AAIC/zczMPQAAgL8AAIA/ANcjvAAAgL8AAIC/4NYjvAAAgL8AAIA/zczMPQAAgL8AAIA/4NYjvAAAgL8AAIA/ANcjvAAAgL8AAIC/zczMPQAAgL8AAIC/AAD/f/9/AAAAAP9//38AAAAA/3//fwAAAAD/f/9/AAAAAP9//38AAAAA/3//fwAA////f////7////9/////v////3////+/////f////7+KK4mrqatC6ooriaupq0LqiiuJq6mrQuqKK4mrqatC6g/V76rvqneVD9Xvqu+qd5UP1e+q76p3lQ/V76rvqneV/38AAP///z//fwAA////P/9/AAD///8//38AAP///z//f/9/////v/9//3////+//3//f////7//f/9/////v/9//3////+//3//f////7//////////P/////////8//////////z//////////P/////////8//////////z//fwAA////P/9/AAD///8//38AAP///z//fwAA////P/9//3////+//3//f////7//////////P/////////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_si0u0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ftw0c"]
albedo_color = Color(0.32049134, 0.32049137, 0.32049137, 1)

[sub_resource type="BoxMesh" id="BoxMesh_rmxwq"]
material = SubResource("StandardMaterial3D_ftw0c")

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ftw0c"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="InputEventAction" id="InputEventAction_75gw0"]
action = &"Interact"

[sub_resource type="ViewportTexture" id="ViewportTexture_ho7cs"]
viewport_path = NodePath("InteractableComponent/Contents/UI/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_nyf0v"]
size = Vector3(7, 5, 7)

[sub_resource type="BoxShape3D" id="BoxShape3D_lutt7"]
size = Vector3(0.8146361, 0.86628723, 0.80761725)

[node name="cardboard_box" type="Node3D" unique_id=992837989 node_paths=PackedStringArray("open_mesh", "closed_mesh", "open_collision", "closed_collision")]
script = ExtResource("1_h752m")
open_mesh = NodePath("Open")
closed_mesh = NodePath("Closed")
open_collision = NodePath("OpenCollision")
closed_collision = NodePath("ClosedCollision")

[node name="InBoxArea" type="Area3D" parent="." unique_id=631715529]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="InBoxArea" unique_id=890622267]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0012817383, -0.02645874, 0.00036621094)
shape = SubResource("BoxShape3D_ftw0c")
debug_color = Color(0.96, 0, 0.015999755, 1)

[node name="DraggableCollision" type="StaticBody3D" parent="." unique_id=2127468671]
transform = Transform3D(0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0)
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D5" type="CollisionShape3D" parent="DraggableCollision" unique_id=579080984]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0.00405884, -1.0002058, -0.0075764037)
shape = SubResource("BoxShape3D_ho7cs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DraggableCollision" unique_id=1754426447]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00405884, 0.011657712, -1.0470086)
shape = SubResource("BoxShape3D_ho7cs")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="DraggableCollision" unique_id=1337389143]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.0395472, 0.011657712, 0.011163861)
shape = SubResource("BoxShape3D_ho7cs")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="DraggableCollision" unique_id=2090337765]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0.021180384, 0.011657712, 1.0360291)
shape = SubResource("BoxShape3D_ho7cs")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="DraggableCollision" unique_id=1797998652]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 1.0304801, 0.011657712, -0.011665576)
shape = SubResource("BoxShape3D_ho7cs")

[node name="PlayerCollision" type="StaticBody3D" parent="." unique_id=237287848]
transform = Transform3D(0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0)
collision_layer = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCollision" unique_id=1148000976]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04302978, 0.036987286, -0.017120363)
shape = SubResource("BoxShape3D_1jtvv")

[node name="OpenCollision" type="StaticBody3D" parent="." unique_id=1050492957]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="OpenCollision" unique_id=648313138]
transform = Transform3D(0.9399491, 0.3413148, 0, -0.3413148, 0.9399491, 0, 0, 0, 1, -0.3590237, 0.5660335, -0.0036621094)
shape = SubResource("BoxShape3D_w0dvq")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="OpenCollision" unique_id=1912078253]
transform = Transform3D(0.93922615, -0.34329903, 0, 0.34329903, 0.93922615, 0, 0, 0, 1, 0.35031858, 0.5660335, -0.0036621094)
shape = SubResource("BoxShape3D_w0dvq")

[node name="ClosedCollision" type="StaticBody3D" parent="." unique_id=135592870]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D6" type="CollisionShape3D" parent="ClosedCollision" unique_id=1841334319]
transform = Transform3D(0.40529156, 0, 0, 0, -1.7715857e-08, -0.40529156, 0, 0.40529156, -1.7715857e-08, 0.0016450137, 0.4647951, -0.0030706543)
shape = SubResource("BoxShape3D_ho7cs")

[node name="Closed" type="MeshInstance3D" parent="." unique_id=1853356462]
transform = Transform3D(0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0)
visible = false
mesh = SubResource("ArrayMesh_s0yhl")

[node name="Open" type="MeshInstance3D" parent="." unique_id=807519085]
transform = Transform3D(0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0, 0.40529156, 0, 0, 0)
mesh = SubResource("ArrayMesh_lp6qq")

[node name="SpacerMesh" type="MeshInstance3D" parent="." unique_id=2059110228]
transform = Transform3D(0.794352, 0, 0, 0, 0.22885484, 0, 0, 0, 0.794352, 0, -0.28172654, 0)
mesh = SubResource("BoxMesh_rmxwq")

[node name="StaticBody3D" type="StaticBody3D" parent="SpacerMesh" unique_id=201652531]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpacerMesh/StaticBody3D" unique_id=354874570]
shape = SubResource("ConcavePolygonShape3D_ftw0c")

[node name="InteractableComponent" type="Node3D" parent="." unique_id=1276813406 node_paths=PackedStringArray("Contents_Node", "UI_Sprite_Node", "SubViewport_Node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.008112371, 0, 0)
script = ExtResource("3_ho7cs")
Contents_Node = NodePath("Contents")
UI_Sprite_Node = NodePath("Contents/UI")
SubViewport_Node = NodePath("Contents/UI/SubViewport")
ActionToPress = SubResource("InputEventAction_75gw0")

[node name="Contents" type="Node3D" parent="InteractableComponent" unique_id=1764687841]

[node name="UI" type="Sprite3D" parent="InteractableComponent/Contents" unique_id=2032846630]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.28288308, -0.4686671)
billboard = 1
no_depth_test = true
render_priority = 1
texture = SubResource("ViewportTexture_ho7cs")

[node name="SubViewport" type="SubViewport" parent="InteractableComponent/Contents/UI" unique_id=1040427473]
transparent_bg = true
gui_disable_input = true
size = Vector2i(1150, 1150)

[node name="Key" type="Label" parent="InteractableComponent/Contents/UI/SubViewport" unique_id=1785418462]
offset_left = 500.0
offset_top = 500.0
offset_right = 629.0
offset_bottom = 646.0
theme = ExtResource("4_1jtvv")
theme_override_font_sizes/font_size = 106
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerAreaBox" type="Area3D" parent="InteractableComponent/Contents" unique_id=551001745]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableComponent/Contents/PlayerAreaBox" unique_id=1445209798]
shape = SubResource("BoxShape3D_nyf0v")

[node name="MimicRaycastBox" type="Area3D" parent="InteractableComponent/Contents" unique_id=454518046]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractableComponent/Contents/MimicRaycastBox" unique_id=1932175499]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.008209288, 0.023323148, 0.0032958686)
shape = SubResource("BoxShape3D_lutt7")

[connection signal="body_entered" from="InBoxArea" to="." method="_on_in_box_area_body_entered"]
[connection signal="body_exited" from="InBoxArea" to="." method="_on_in_box_area_body_exited"]
[connection signal="action_triggered" from="InteractableComponent" to="." method="_on_interactable_component_action_triggered"]
[connection signal="body_entered" from="InteractableComponent/Contents/PlayerAreaBox" to="InteractableComponent" method="_on_player_area_box_body_entered"]
[connection signal="body_exited" from="InteractableComponent/Contents/PlayerAreaBox" to="InteractableComponent" method="_on_player_area_box_body_exited"]
[connection signal="area_entered" from="InteractableComponent/Contents/MimicRaycastBox" to="InteractableComponent" method="_on_mimic_raycast_box_area_entered"]
[connection signal="area_exited" from="InteractableComponent/Contents/MimicRaycastBox" to="InteractableComponent" method="_on_mimic_raycast_box_area_exited"]
